# indeca

./: .flake8  .gitignore  00.simulate_data.py  00.verify_ar.py  01.benchmark_AR.py  01.benchmark_bin.py  01.pipeline_workflow.py  AR_update.py  README.md  dashboard_implementation_plan.md  make_plots.py  pyproject.toml  simulate_temporal_update.py  verify_AR_coef.py  verify_ar.py
.github/workflows/: ci.yml
benchmarks/: cnmf.py  s00_benchmark_realds.py  s00_simulate_data.py  s01_benchmark_AR.py  s01_benchmark_bin.py  s01_benchmark_pipeline.py  s01_benchmark_pipeline_mp.py
benchmarks/profile/: README.md  profile_pipeline_large.py  profile_pipeline_medium.py  profile_pipeline_small.py
benchmarks/routine/: io.py  utils.py
environments/: caiman.yml  generic.yml
figs/benchmark_ar/: coefs.html  dbg-free-all.html
figs/benchmark_bin/: metric_contours.html  metrics.html
indeca/core/deconv/: deconv.py
indeca/pipeline/: init.py
indeca/utils/: __init__.py  utils.py
routine/: bin_algo.py  plotting.py  simulation.py  update_AR.py  update_bin.py  utilities.py
scripts/: .gitignore  caiman_test.py  make_figures.py  s00_benchmark_realds.py  s00_prepare_dataset.py  s00_simulate_data.py  s00_verify_ar.py  s01_benchmark_AR.py  s01_benchmark_bin.py  s01_benchmark_pipeline.py  s01_benchmark_pipeline_mp.py  s01_caiman_test.py  s01_mlspike.m  s02_compute_metrics.py  s02_mlspike_metrics.py  s03_make_figures.py  s99_dbg_ar.py  s99_dbg_better_l0.py
scripts/figs/benchmark_bin/: metric_contours.html  metrics.html  scaling.html
scripts/routine/: io.py
src/indeca/: AR_kernel.py  __init__.py  dashboard.py  deconv.py  pipeline.py  simulation.py  utils.py
src/indeca/core/: AR_kernel.py  simulation.py
src/indeca/core/deconv/: __init__.py  config.py  deconv.py  solver.py  thresh_and_solv.py  utils.py
src/indeca/pipeline/: __init__.py  ar_update.py  binary_pursuit.py  config.py  convergence.py  init.py  iteration.py  metrics.py  pipeline.py  preprocess.py  types.py
src/indeca/utils/: __init__.py  profiling.py
src/minian_bin/: AR_kernel.py  __init__.py  benchmark_utils.py  cnmf.py  dashboard.py  deconv.py  logging_config.py  metrics.py  pipeline.py  simulation.py  update_AR.py  update_bin.py  update_pipeline.py  utilities.py  utils.py
src/minian_bin/api/: README.md  __init__.py  app.py  dashboard_adapter.py  dashboard_adapter_fixed.py  server.py
src/minian_bin/api/data/: 0d189f7a-4c2d-4a18-bb88-e5c961c0b40c.json  (+2 more)
src/minian_bin/frontend/: package.json
tests/: conftest.py  make_figures.py  plot_results.py  plotting_utils.py  test_AR_kernel.py  test_deconv.py  test_imports.py  test_logging_config.py  test_pipeline.py  test_simulation.py  test_utils.py
tests/demo/: test_deconv_demo_penal.py  test_deconv_demo_scale.py  test_deconv_demo_thres.py
tests/integration/: test_deconv_masking.py  test_deconv_solve.py  test_pipeline.py
tests/regression/: test_deconv_penal.py  test_deconv_thres.py
tests/robustness/: test_AR_kernel_fit.py  test_deconv_scale.py
tests/testing_utils/: cnmf.py  compose.py  io.py  metrics.py  misc.py  plotting.py
tests/unit/: test_AR_kernel_estimation.py  test_deconv_G_matrix.py  test_logging_config.py  test_simulation.py  test_utils.py
tests/validation/: test_deconv_realds.py
(+12 files in other folders)
