[project]
name = "minian-bin"
version = "0.1.0"
description = ""
authors = [{ name = "phildong", email = "" }]
dependencies = [
    "numpy<2",
    "pandas",
    "plotly",
    "seaborn",
    "xarray",
    "scipy",
    "tqdm",
    "opencv-python",
    "pymetis",
    "python-levenshtein",
    "dask",
    "networkx",
    "numba",
    "zarr",
    "cvxpy==1.5.1",
    "ffmpeg-python",
    "scikit-image",
    "scikit-learn",
    "statsmodels",
    "distributed",
    "sparse",
    "rechunker",
    "natsort",
    "colorcet",
    "netcdf4",
    "pyarrow",
    "dtaidistance>=2.3.12",
    "piqp>=0.4.2",
    "osqp>=0.6.7.post3",
    "fsspec>=2024.10.0",
    "panel>=1.5.5",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "GPL-3.0" }


[tool.pdm]
distribution = true
[tool.pdm.scripts]
simulate_data = "python scripts/s00_simulate_data.py"
benchmark_ar = "python scripts/s01_benchmark_ar.py"
benchmark_bin = "python scripts/s01_benchmark_bin.py"

[tool.pdm.dev-dependencies]
dev = [
    "line-profiler[all]>=4.1.3",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


