[project]
name = "minian-bin"
version = "0.1.0"
description = ""
authors = [{ name = "phildong", email = "" }]
dependencies = [
    "numpy<2",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "seaborn>=0.13.2",
    "xarray>=2025.1.2",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "opencv-python>=4.11.0.86",
    "python-levenshtein>=0.26.1",
    "dask>=2025.2.0",
    "cvxpy==1.5.1",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "distributed>=2025.2.0",
    "netcdf4>=1.7.2",
    "pyarrow>=19.0.1",
    "dtaidistance>=2.3.12",
    "osqp>=0.6.7.post3",
    "panel>=1.5.5",
    "sparse>=0.15.5",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "GPL-3.0" }


[tool.pdm]
distribution = true
[tool.pdm.scripts]
simulate_data = "python scripts/s00_simulate_data.py"
benchmark_ar = "python scripts/s01_benchmark_ar.py"
benchmark_bin = "python scripts/s01_benchmark_bin.py"

[tool.pdm.dev-dependencies]
dev = [
    "line-profiler[all]>=4.1.3",
    "jupyter>=1.1.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


